--- a/index.html
+++ b/index.html
@@ -5,11 +5,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leader Board</title>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="./styles/style.css">
+
+    <!-- fonts -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+    </style>
 </head>
 
 <body>
-    <h1>Leader Board</h1>
+    <!-- Header Start -->
+    <header>
+        <nav>
+            <!-- <h1>This is players navbar</h1> -->
+        </nav>
+    </header>
+    <!-- Header End -->
+
+    <main>
+        <!-- top section -->
+        <section class="container">
+            <div class="top-players ">
+                <h2 class="section-title">Top Players</h2>
+                <div class="players">
+                    <!-- Emit rules -->
+                    <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Top Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name" class="player-name">Top Player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name" class="player-name">Top Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name" class="player-name">Top Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name" class="player-name">Top Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Top Player-6</h3>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <h2 class="section-title">Top Blogs</h2>
+            <div class="top-blogs">
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Blog Name</h3>
+                        <p class="blog-author">By <a href="">Author</a> </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Blog Name</h3>
+                        <p class="blog-author">By <a href="">Author</a> </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Blog Name</h3>
+                        <p class="blog-author">By <a href="">Author</a> </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Blog Name</h3>
+                        <p class="blog-author">By <a href="">Author</a> </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <!-- latest Courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+
+        </section>
+    </main>
 </body>
 
 </html>
