--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
 
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/c100463f3b.js" crossorigin="anonymous"></script>
+
     <!-- fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
@@ -105,6 +108,85 @@
         <!-- latest Courses -->
         <section class="container">
             <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+
+
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React the course title</h3>
+                        <p class="course-author"> By Author</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <p>
+                                    <i class="far fa-clock"></i> 01:30hr
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React the course title</h3>
+                        <p class="course-author"> By Author</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <p>
+                                    <i class="far fa-clock"></i> 01:30hr
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React the course title</h3>
+                        <p class="course-author"> By Author</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <p>
+                                    <i class="far fa-clock"></i> 01:30hr
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
