final build complete

--- a/index.html
+++ b/index.html
@@ -21,8 +21,24 @@
 <body>
     <!-- Header Start -->
     <header>
-        <nav>
-            <!-- <h1>This is players navbar</h1> -->
+        <nav class="nav-bar">
+            <div>
+                <img class="nav-logo" src="images/icons/logo.png" alt="">
+            </div>
+            <div class="nav-info">
+                <div class="nav-items">
+                    <ul>
+                        <li class="item"><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Login</a></li>
+                    </ul>
+                </div>
+                <div class="nav-icon">
+                    <img src="images/icons/profile.png" alt="">
+                    <a href=""><i class="fas fa-sign-out-alt"></i></a>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- Header End -->
