final build complete

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <!-- Header Start -->
     <header>
         <nav class="nav-bar">
-            <div>
+            <div class="nav-icon">
                 <img class="nav-logo" src="images/icons/logo.png" alt="">
+                <p class="nav-icon-text">Icon</p>
             </div>
             <div class="nav-info">
                 <div class="nav-items">
